# fastapi-gradio-towhee-demo

./: .gitignore  README.md  docker-compose.yml  fastapi_gradio.py  fill_embeddings.py  gradio_only.py  pyproject.toml  towhee_gradio.py  towhee_only.py
